@@ -3,6 +3,7 @@ package com.example.team_app_java.domain.blog.service;
 import com.example.team_app_java.domain.blog.dto.request.BlogCreateRequestDto;
 import com.example.team_app_java.domain.blog.dto.request.BlogUpdateRequestDto;
 import com.example.team_app_java.domain.blog.dto.response.BlogResponseDto;
+import com.example.team_app_java.domain.blog.dto.response.PageResponseDto;
 import com.example.team_app_java.domain.blog.entity.Blog;
 import com.example.team_app_java.domain.blog.repository.BlogRepository;
 import com.example.team_app_java.domain.user.entity.User;
@@ -10,6 +11,10 @@ import com.example.team_app_java.global.exception.BlogNotFoundException;
 import com.example.team_app_java.global.exception.UnauthorizedException;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -36,12 +41,15 @@ public class BlogService {
     }
 
     // 블로그 글 전체 조회
-    public List<BlogResponseDto> findAll() {
+    public PageResponseDto<BlogResponseDto> findAll(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+        Page<Blog> blogPage = blogRepository.findAll(pageable);
 
-        return blogRepository.findAll()
-                .stream()
+        List<BlogResponseDto> content = blogPage.getContent().stream()
                 .map(BlogResponseDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageResponseDto<>(content, blogPage.getNumber(), blogPage.getTotalPages(), blogPage.getTotalElements());
     }
 
     // 블로그 글 선택 조회
